--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-prebuild": "cd client && npm install",
+    "heroku-postbuild": "npm run build"
   },
   "author": "",
   "license": "ISC",
