--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "eslint": "^5.16.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "generic-pool": "^3.6.1",
@@ -29,5 +30,8 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.42.0"
+  },
+  "devDependencies": {
+    "eslint-plugin-node": "^8.0.1"
   }
 }
